[gd_scene load_steps=23 format=3 uid="uid://bh7sntndx4xcr"]

[ext_resource type="Script" path="res://scripts/jogador.gd" id="1_54iid"]
[ext_resource type="Texture2D" uid="uid://c31mn2mk2af1c" path="res://Addons/Free/Main Characters/Protagonista/kora_hit.png" id="2_6gb2j"]
[ext_resource type="Texture2D" uid="uid://dfgwqtl8mklnl" path="res://Addons/Free/Main Characters/Protagonista/kora_idle_.png" id="3_5sxsa"]
[ext_resource type="AudioStream" uid="uid://d31rceqv1j2lt" path="res://Addons/Free/Sons/jump.mp3" id="3_fcgm3"]
[ext_resource type="Texture2D" uid="uid://bbmmwip4wydwu" path="res://Addons/Free/Main Characters/Protagonista/kora_pulo.png" id="4_8vbxo"]
[ext_resource type="Texture2D" uid="uid://csxtwqa73rg3p" path="res://Addons/Free/Main Characters/Protagonista/kora_andando.png" id="5_lc75a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8noo"]
size = Vector2(18, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2qka"]
atlas = ExtResource("2_6gb2j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jfah"]
atlas = ExtResource("2_6gb2j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6ll0"]
atlas = ExtResource("2_6gb2j")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0poax"]
atlas = ExtResource("3_5sxsa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_80bhx"]
atlas = ExtResource("3_5sxsa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yug2n"]
atlas = ExtResource("4_8vbxo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t32wj"]
atlas = ExtResource("4_8vbxo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hur0a"]
atlas = ExtResource("4_8vbxo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ef62"]
atlas = ExtResource("5_lc75a")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_630lu"]
atlas = ExtResource("5_lc75a")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nt0cq"]
atlas = ExtResource("5_lc75a")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yssi4"]
atlas = ExtResource("5_lc75a")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_h7ry2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2qka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jfah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6ll0")
}],
"loop": true,
"name": &"hurt",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0poax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80bhx")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yug2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t32wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hur0a")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ef62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_630lu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt0cq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yssi4")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7iumc"]
size = Vector2(23, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eu4es"]
size = Vector2(18, 5)

[node name="jogador" type="CharacterBody2D"]
collision_mask = 86
script = ExtResource("1_54iid")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_k8noo")

[node name="anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_h7ry2")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.285102

[node name="animação" type="AnimationPlayer" parent="."]

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="colision" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_7iumc")
debug_color = Color(0.960784, 0, 0.52549, 0.419608)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="pular" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fcgm3")
volume_db = -10.0

[node name="Ray_direita" type="RayCast2D" parent="."]
position = Vector2(10, 0)
target_position = Vector2(10, 0)
collision_mask = 4
hit_from_inside = true

[node name="Ray_esquerda" type="RayCast2D" parent="."]
position = Vector2(-10, 0)
target_position = Vector2(-10, 0)
collision_mask = 4

[node name="cabeca_colisor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="cabeca_colisor"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_eu4es")

[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="body_entered" from="cabeca_colisor" to="." method="_on_cabeca_colisor_body_entered"]
